fix jumping on apple

--- a/src/index.scss
+++ b/src/index.scss
@@ -3,6 +3,7 @@ $accentDim: #8e7b57;
 
 html {
   font-size: 18px;
+  font-variant-numeric: tabular-nums;
 }
 
 body {
